--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "axios": "^1.4.0",
     "babel-eslint": "^10.1.0",
     "clsx": "^1.1.1",
+    "jsonwebtoken": "^9.0.1",
     "mdi-material-ui": "^7.1.0",
     "next": "12.0.4",
     "nprogress": "^0.2.0",
